<resources>
    <string name="app_name">The Forgotten Bulgarian</string>
    <string name="app_name_bg">Забравѣният български</string>
    <string name="play">Play</string>
    <string name="login">Login</string>
    <string name="login_bg">Вход</string>
    <string name="register">Register</string>
    <string name="register_bg">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_bg">Влез</string>
    <string name="register_bg_extended">Регистрирай се</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="right_corner_ornamental">Right Corner Ornamental</string>
    <string name="left_corner_ornamental">Left Corner Ornamental</string>
    <string name="bottom_divider_ornamental">Bottom Devider Ornamental</string>
    <string name="top_border_ornamental">Top Border Ornamental</string>
    <string name="dont_have_an_account_bg">Нѣмаш профил?</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="guess_error">Нем, това не е търсената дума</string>
</resources>