<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/right_corner_ornamental"
            android:scaleType="centerInside"
            android:src="@drawable/ornamental_corner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200sp"
            app:layout_constraintWidth_percent="0.4" />

        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/left_corner_ornamental"
            android:rotationY="180"
            android:scaleType="centerInside"
            android:src="@drawable/ornamental_corner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200sp"
            app:layout_constraintWidth_percent="0.4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/image_shadow"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="400sp"
            app:layout_constraintWidth_percent="0.65">

            <ImageView
                android:id="@+id/image_background_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/palm_sunday" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monomachus"
            android:letterSpacing="0.1"
            android:scaleType="centerCrop"
            android:text="@string/login_bg"
            android:textColor="@color/red_brown_700"
            android:textFontWeight="700"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/text_login"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/enter_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/bottom_devider"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bottom_divider_ornamental"
            android:padding="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ornamental_simple_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>